feat: user profile remove orgs [EP-2620] (#61)
