# src/spec/swagger.json
@@ -3474,6 +3474,33 @@
         ]
       }
     },
+    "/users/profile/organizations": {
+      "post": {
+        "tags": ["profile"],
+        "summary": "Remove current user's organizations",
+        "operationId": "removeUserOrganizations",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "default": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/management/users": {
       "get": {
         "tags": ["users-management"],
